# action-recognition-stanford40

./: .gitignore  Makefile  README.md  _example.yml  main.py  plot.py  pyproject.toml
.github/workflows/: ci.yaml
models/: __init__.py  custom_nn.py  defaults.py  errors.py  manager.py  pretrained_nn.py  utils.py
sfd40/: __init__.py  dataset.py  defaults.py  errors.py  loader.py  manager.py  splitter.py  transforms.py  utils.py
