[project]
name = "action-recogntition-stanford40"
version = "0.1.0"
description = "An action recognition NN working with torch to detect action on still images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "torch",
    "torchvision>=0.18.1",
    "typing-extensions>=4.10.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]
